# Constant-time-Quaternion-SQIsign

./: README.md
Qlapoti-C/: Qlapoti_README.md  README.md
Qlapoti-C/.cmake/: target.cmake
Qlapoti-C/scripts/precomp/: parameters.py  precompute_quaternion_constants.sage  precompute_quaternion_data.sage
Qlapoti-C/src/id2iso/ref/: lvlx_test.cmake
Qlapoti-C/src/id2iso/ref/include/: id2iso.h
Qlapoti-C/src/id2iso/ref/lvlx/test/: dim2id2iso_benchmarks.c  qlapoti_normeq_benchmarks.c
Qlapoti-C/src/precomp/ref/lvl1/include/: endomorphism_action.h
Qlapoti-C/src/precomp/ref/lvl3/include/: quaternion_constants.h
Qlapoti-C/src/precomp/ref/lvl5/include/: quaternion_constants.h
Qlapoti-C/src/quaternion/ref/generic/: intbig.c  qlapoti.c
Qlapoti-C/src/quaternion/ref/generic/hnf/: hnf_internal.c
Qlapoti-C/src/quaternion/ref/generic/include/: intbig.h  quaternion.h
Qlapoti-C/src/quaternion/ref/generic/internal_quaternion_headers/: hnf_internal.h  intbig_internal.h  internal.h
Qlapoti-C/src/quaternion/ref/generic/test/: CMakeLists.txt  intbig.c  qlapoti.c
cc/ct-quaternion-NIST2-main/include/: sqisign_namespace.h
cc/ct-quaternion-NIST2-main/src/id2iso/ref/lvlx/: dim2id2iso.c
cc/ct-quaternion-NIST2-main/src/quaternion/ref/generic/: CMakeLists.txt  ideal.c  intbig.c  integers.c  lattice.c  normeq.c
cc/ct-quaternion-NIST2-main/src/quaternion/ref/generic/bench/: CMakeLists.txt  dim4.c  ideal.c  lattice.c  quaternion_bench.c  repint.c
cc/ct-quaternion-NIST2-main/src/quaternion/ref/generic/hnf/: hnf.c  (+2 more)
python/: ct_represent-integer.py  ct_represent-integer2.py
(+12 files in other folders)
